# widgets-factory

./: .browserslistrc  .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  global.d.ts  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js  tsconfig.json  vitest.workspace.ts
.husky/: commit-msg
scripts/: verify-commit.js
tools/widgets-cli/: Cargo.toml  README.md  index.d.ts  index.js  package.json
tools/widgets-cli/__test__/: index.spec.mjs
tools/widgets-cli/src/: error.rs  lib.rs
tools/widgets-cli/src/commands/: new.rs
tools/widgets-cli/src/features/: flags.rs  mod.rs  params.rs
tools/widgets-cli/templates/lit/: package.json
tools/widgets-cli/templates/lit/src/: App.ts  index.scss  index.ts
tools/widgets-cli/templates/lit/src/components/: Sub.ts
tools/widgets-cli/templates/solid/: package.json
tools/widgets-cli/templates/solid/src/: App.tsx  Sub.tsx  index.scss  index.tsx  tailwind.css
tools/widgets-cli/templates/svelte/: package.json
tools/widgets-cli/templates/svelte/src/: App.svelte  index.ts
tools/widgets-cli/templates/vue3/: package.json
tools/widgets-cli/templates/vue3/src/: App.vue  index.ts
tools/widgets-cli/templates/vue3/src/components/: Sub.vue
