[package]
edition = "2021"
name = "widgets-cli"
version = "0.0.1"
description = "Widgets cli with napi-rs."

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
fs_extra = "1.3.0"
inquire = "0.7.0"
napi = { version = "2.16.0", default-features = false, features = ["napi4"] }
napi-derive = "2.16.0"
once_cell = "1.19.0"
regex = "1.10.3"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"

[build-dependencies]
napi-build = "2.1.2"

[profile.release]
lto = true
strip = "symbols"
